# ocaml5-concurrent-union-find

./: Makefile  README.md  dune  dune-project  presentation.pptx
bench/: union_find_bench.ml  union_find_connectivity_bench.ml  union_find_graph_bench.ml  union_find_graph_structure_bench.ml
report/: main.tex  references.bib
results/: bench_connectivity_results.csv  bench_graph_structure_results.csv  bench_trend_results.csv
scripts/: plot_time.py
src/: cas_union_find.ml  graph_connectivity.ml  graph_generators.ml  mutex_union_find.ml  node_lock_union_find.ml  sequential_union_find.ml  union_find.mli  union_find_common.ml  union_find_stats.ml
test/: QCheck_lin.ml  QCheck_stm.ml  Test_support.ml  cas_stress_test.ml  union_find_correctness_test.ml
